--- a/go_blockchain/wallet_server/templates/index.html
+++ b/go_blockchain/wallet_server/templates/index.html
@@ -33,7 +33,8 @@
           'sender_private_key': $('#private_key').val(),
           'sender_blockchain_address': $('#blockchain_address').val(),
           'recipient_blockchain_address': $('#recipient_blockchain_address').val(),
-          'value': $('#sender_amount').val(),
+          'sender_public_key': $('#public_key').val(),
+          'value': $('#send_amount').val(),
         };
 
         $.ajax({
@@ -77,7 +78,7 @@
     <div>
       Address: <input id="recipient_blockchain_address" size="100" type="text" />
       <br>
-      Amount: <input id="sender_amount" type="text" />
+      Amount: <input id="send_amount" type="text" />
       <br>
       <button id="send_money_button">Send</button>
     </div>
